--- a/backend_Resultados/config.json
+++ b/backend_Resultados/config.json
@@ -1,7 +1,7 @@
 {
   "url-backend": "127.0.0.1",
-  "port": 8888,
+  "port": 8000,
 
-  "data-db-connection": "mongodb+srv://darwin-pruebas:samidj303@cluster0.k7b98ia.mongodb.net/?retryWrites=true&w=majority" ,
-  "name-db": "bd-sistema-votacion"
+  "data-db-connection": "mongodb+srv://lis-admin:toriyama@cluster0.cbkgjl1.mongodb.net/?retryWrites=true&w=majority" ,
+  "name-db": "bd-backend-resultados"
 }
